Fix contact form page and home button alignment

--- a/app/src/main/resources/static/css/contact.css
+++ b/app/src/main/resources/static/css/contact.css
@@ -29,6 +29,10 @@
 	animation-fill-mode: forwards;
 }
 
+#home-return {
+	float: right;
+}
+
 .done-icone {
 	color: #e61344;
 	font-size: 100%;
